--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ retrofit = "2.9.0"
 roomLivedata = "2.6.1)"
 roomLivedataVersion = "2.6.1"
 roomRuntime = "2.6.1"
+threetenabp = "1.4.0"
 workRuntimeKtx = "2.10.0"
 ksp = "2.1.0-1.0.29"
 lifecycleLivedataKtx = "2.8.7"
@@ -67,6 +68,7 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 lib-geoip = { module = "com.enonic.lib:lib-geoip", version.ref = "libGeoip" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
