--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,11 +2,11 @@
 accompanistSwiperefreshVersion = "0.32.0"
 agp = "8.9.1"
 animatedNavigationBar = "1.0.0"
-animationGraphics = "1.7.6"
-constraintlayout = "2.2.0"
+animationGraphics = "1.7.8"
+constraintlayout = "2.2.1"
 geoip2 = "3.1.0"
 hilt-android = "2.54"
-converterGson = "2.9.0"
+converterGson = "2.10.0"
 hiltAndroidCompiler = "2.54"
 hiltWork = "1.2.0"
 kotlin = "2.1.0"
@@ -14,21 +14,22 @@ coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-kotlinxCoroutinesAndroid = "1.7.3"
-kotlinxCoroutinesCore = "1.6.4"
-kotlinxCoroutinesTest = "1.6.0"
-kotlinxSerializationJson = "1.6.0"
+kotlinxCoroutinesAndroid = "1.10.1"
+kotlinxCoroutinesCore = "1.10.1"
+kotlinxCoroutinesTest = "1.10.1"
+kotlinxSerializationJson = "1.6.3"
 libGeoip = "2.0.0"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
-composeBom = "2025.01.00"
+activityCompose = "1.10.1"
+composeBom = "2025.03.01"
+lottieComposeVersion = "6.3.0"
 material = "1.12.0"
 material3 = "1.3.1"
 mockitoAndroidVersion = "4.0.0"
 mockitoCore = "4.0.0"
-navigationCompose = "2.8.5"
+navigationCompose = "2.8.9"
 playServicesLocation = "21.3.0"
-retrofit = "2.9.0"
+retrofit = "2.10.0"
 roomLivedata = "2.6.1)"
 roomLivedataVersion = "2.6.1"
 roomRuntime = "2.6.1"
@@ -79,6 +80,7 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 lib-geoip = { module = "com.enonic.lib:lib-geoip", version.ref = "libGeoip" }
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieComposeVersion" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
